--- a/denmacundefined/src/i18n/messages.ua.xlf
+++ b/denmacundefined/src/i18n/messages.ua.xlf
@@ -6,7 +6,7 @@
         <source>Who am I ?</source>
         <target>Хто я ?</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">1</context>
         </context-group>
       </trans-unit>
@@ -14,7 +14,7 @@
         <source>I am a campion.</source>
         <target>Я чемпіон.</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">2</context>
         </context-group>
       </trans-unit>
@@ -22,23 +22,23 @@
         <source>Don&apos;t you trust me ?</source>
         <target>Не віриш мені ?</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">3</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="9570b93b1671f3a3624fd1d122a1dec54835b31c" datatype="html">
-        <source>Trust me, I am a jedi, not so happy than this man:</source>
-        <target>Вір мені, я джедай, не такий щасливий як цей чувак:</target>
+      <trans-unit id="06a8e068cc800a0824e3e216325d921d0ddb4bd3" datatype="html">
+        <source>Trust me, I could be a jedi, not so happy than this man:</source>
+        <target>Вір мені, я можу бути джедаєм, не таким щасливим як цей чувак:</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4ae17c0c6aef97de690e46c582c60bb26e322422" datatype="html">
         <source>but I don&apos;t give up.</source>
-        <target>але я не здаюся.</target>
+        <target>але я не здаюсь.</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">6</context>
         </context-group>
       </trans-unit>
@@ -46,15 +46,15 @@
         <source>Don&apos;t you still beleave me ?</source>
         <target>Ти все ще не віриш мені ?</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">7</context>
         </context-group>
       </trans-unit>
       <trans-unit id="b76dc92485d393e576241684fb64ccd9c25b61e4" datatype="html">
         <source>so, look on it:</source>
-        <target>ну, подивись це:</target>
+        <target>гаразд, подивись ось це:</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">8</context>
         </context-group>
       </trans-unit>
@@ -62,15 +62,15 @@
         <source>Do you still here ?</source>
         <target>Ти все ще тут ?</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">10</context>
         </context-group>
       </trans-unit>
       <trans-unit id="57e2c3e6097e400fed631a51cb5639d0a0664c67" datatype="html">
-        <source>Don&apos;t spend your time and start doing your &quot;fucking&quot; dreams</source>
-        <target>Не витрачай свій час і давай працюй над своїми "бісовими" ідеями</target>
+        <source>Don&apos;t spend your time and start doing your &quot;fucking&quot; dreams.</source>
+        <target>Не витрачай свій час, і починай робити свої &quot;бісові&quot; мрії.</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">11</context>
         </context-group>
       </trans-unit>
