--- a/denmacundefined/src/i18n/messages.xlf
+++ b/denmacundefined/src/i18n/messages.xlf
@@ -2,67 +2,137 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en" datatype="plaintext" original="ng2.template">
     <body>
+      <trans-unit id="34e7c3c63e36eccc42c94cfdbae747ab1a51f374" datatype="html">
+        <source>Who I am</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">11</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="d2a7deb7096cada2c3177157652680fe7e6de0ed" datatype="html">
+        <source>Projects</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="34746fb1c7f3d2194d99652bdff89e6e14c9c4f4" datatype="html">
+        <source>Contact</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">17</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="67bccbc3329999f400e71332b612282a3c911919" datatype="html">
+        <source>Just a <x id="START_STRIKETHROUGH_TEXT" ctype="x-s" equiv-text="&lt;s&gt;"/>good<x id="CLOSE_STRIKETHROUGH_TEXT" ctype="x-s" equiv-text="&lt;/s&gt;"/> person </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">29</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="c6cf8a10a573030c1783b1107d96612df5116374" datatype="html">
+        <source>JavaScript evangelist, and sometimes a dreamer...</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">33</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="0d77288302eef70bf1ef93f729faf77a3e1786e5" datatype="html">
+        <source>Find Out More</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">34</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="d1f497dfbe86e05257865fef21ae82a3ab93db91" datatype="html">
+        <source>Smart Place (IoT DIY and CMS platform)</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">53</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="0b0ad681804b5a871a01fef5b6347902d9d4679b" datatype="html">
+        <source>See now!</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">54</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="f21d15cd4a79f9c99e9dda36533c86d2c63bfb53" datatype="html">
+        <source>Created by <x id="START_LINK" ctype="x-a" equiv-text="&lt;a&gt;"/>Den MacUndefined<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/> in 2019 year</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/app.component.html</context>
+          <context context-type="linenumber">66</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="9b9840f33404e13745b1bf325a073396080c72c6" datatype="html">
         <source>Who am I ?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">1</context>
+          <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="6067d2b4eb66ab75eb129d7027adefe1279049ad" datatype="html">
-        <source>I am a campion.</source>
+      <trans-unit id="13f4dc6af9824c432898c3904d31cca979e28722" datatype="html">
+        <source>I am a campion!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">2</context>
+          <context context-type="linenumber">6</context>
         </context-group>
       </trans-unit>
       <trans-unit id="13207d837d0f01ed7375cc9b1945c8d5b6712e0b" datatype="html">
         <source>Don&apos;t you trust me ?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">3</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="06a8e068cc800a0824e3e216325d921d0ddb4bd3" datatype="html">
-        <source>Trust me, I could be a jedi, not so happy than this man:</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">4</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="4ae17c0c6aef97de690e46c582c60bb26e322422" datatype="html">
-        <source>but I don&apos;t give up.</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">6</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="3287fcb83c1f8cb71ed197c386cf076e80197455" datatype="html">
-        <source>Don&apos;t you still beleave me ?</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">7</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="b76dc92485d393e576241684fb64ccd9c25b61e4" datatype="html">
-        <source>so, look on it:</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
           <context context-type="linenumber">8</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="a660e73d6e31190db4e15b8867802783360f65a3" datatype="html">
+        <source>so, look </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="fb3b1598cc90f6ae022233f95636b208f4f421be" datatype="html">
+        <source>on it</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
+          <context context-type="linenumber">11</context>
         </context-group>
       </trans-unit>
       <trans-unit id="157d3ebae14be38b153695e3a50ebab7fdf96a61" datatype="html">
         <source>Do you still here ?</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">10</context>
+          <context context-type="linenumber">15</context>
         </context-group>
       </trans-unit>
       <trans-unit id="57e2c3e6097e400fed631a51cb5639d0a0664c67" datatype="html">
         <source>Don&apos;t spend your time and start doing your &quot;fucking&quot; dreams</source>
         <context-group purpose="location">
           <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
-          <context context-type="linenumber">11</context>
+          <context context-type="linenumber">16</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="eb53db0ee4ea757049d016a1aadeba4116f02481" datatype="html">
+        <source>Look on my projects</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/who-am-i/who-am-i.component.html</context>
+          <context context-type="linenumber">18</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="cd9e7ae37861c5cb07e1466c10fbab6d55e80aa2" datatype="html">
+        <source>Where can you find me ?</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/contact/contact.component.html</context>
+          <context context-type="linenumber">4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="a5abf5f255d74c316840cb48dcfb47ff29cb6cd1" datatype="html">
+        <source>You can do it by these links:</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/contact/contact.component.html</context>
+          <context context-type="linenumber">6</context>
         </context-group>
       </trans-unit>
     </body>
